jilles      2006/10/04 16:42:42 UTC	(20061004-6653)
  Log:
  Constify some more in the xmlrpc library.
  

  Changes:	Modified:
  +2 -2		trunk/include/xmlrpc.h (File Modified) 
  +2 -2		trunk/src/xmlrpc.c (File Modified) 


jilles      2006/10/04 13:56:08 UTC	(20061004-6651)
  Log:
  Add an example of using the new xmlrpc stuff using perl RPC::XML.
  

  Changes:	Modified:
  +69 -0	trunk/contrib/perlxmlrpc.pl (File Added) 


jilles      2006/10/04 13:53:34 UTC	(20061004-6649)
  Log:
  Rewrite modules/xmlrpc/main with code from contrib/gen_httpd.
  atheme.login and atheme.logout are now in main.
  The new method atheme.command which can be used to invoke
  any services command is also in main.
  xmlrpc configuration is the same as before.
  

  Changes:	Modified:
  +6 -6		trunk/dist/example.conf (File Modified) 
  +0 -115	trunk/modules/xmlrpc/account.c (File Modified) 
  +560 -67	trunk/modules/xmlrpc/main.c (File Modified) 


jilles      2006/10/04 13:18:20 UTC	(20061004-6647)
  Log:
  There is no default for xmlrpc::port.
  

  Changes:	Modified:
  +0 -1		trunk/dist/example.conf (File Modified) 


jilles      2006/10/02 16:02:27 UTC	(20061002-6645)
  Log:
  for non-irc, require explicit target for /ns logut and /cs unban
  

  Changes:	Modified:
  +11 -3	trunk/modules/chanserv/ban.c (File Modified) 
  +7 -0		trunk/modules/nickserv/logout.c (File Modified) 


jilles      2006/10/02 15:54:30 UTC	(20061002-6643)
  Log:
  nickserv login/identify can only be executed via IRC
  

  Changes:	Modified:
  +6 -0		trunk/modules/nickserv/identify.c (File Modified) 


jilles      2006/10/02 15:49:12 UTC	(20061002-6641)
  Log:
  Constify the metadata functions.
  

  Changes:	Modified:
  +3 -3		trunk/include/metadata.h (File Modified) 
  +3 -3		trunk/src/node.c (File Modified) 


jilles      2006/10/02 15:44:53 UTC	(20061002-6639)
  Log:
  Use get_oper_name() in some more places.
  

  Changes:	Modified:
  +1 -1		trunk/modules/chanserv/mark.c (File Modified) 