@@ -4,7 +4,7 @@
  *
  * This file contains code for the CService INVITE functions.
  *
- * $Id: invite.c 6577 2006-09-30 21:17:34Z jilles $
+ * $Id: invite.c 6657 2006-10-04 21:22:47Z jilles $
  */
 
 #include "atheme.h"
@@ -12,7 +12,7 @@
 DECLARE_MODULE_V1
 (
 	"chanserv/invite", FALSE, _modinit, _moddeinit,
-	"$Id: invite.c 6577 2006-09-30 21:17:34Z jilles $",
+	"$Id: invite.c 6657 2006-10-04 21:22:47Z jilles $",
 	"Atheme Development Group <http://www.atheme.org>"
 );
 
@@ -82,7 +82,7 @@ static void cs_cmd_invite(sourceinfo_t *si, int parc, char *parv[])
 		return;
 	}
 
-	invite_sts(chansvs.me->me, si->su, mc->chan);
+	invite_sts(si->service->me, si->su, mc->chan);
 	logcommand(si, CMDLOG_SET, "%s INVITE", mc->name);
 	command_success_nodata(si, "You have been invited to \2%s\2.", mc->name);
 }
