@@ -4,7 +4,7 @@
  *
  * This file contains routines to handle the CService SET command.
  *
- * $Id: set.c 6617 2006-10-01 22:11:49Z jilles $
+ * $Id: set.c 6657 2006-10-04 21:22:47Z jilles $
  */
 
 #include "atheme.h"
@@ -12,7 +12,7 @@
 DECLARE_MODULE_V1
 (
 	"nickserv/set", FALSE, _modinit, _moddeinit,
-	"$Id: set.c 6617 2006-10-01 22:11:49Z jilles $",
+	"$Id: set.c 6657 2006-10-04 21:22:47Z jilles $",
 	"Atheme Development Group <http://www.atheme.org>"
 );
 
@@ -63,7 +63,7 @@ static void ns_cmd_set(sourceinfo_t *si, int parc, char *parv[])
 	/* take the command through the hash table */
         if ((c = command_find(&ns_set_cmdtree, setting)))
 	{
-		command_exec(nicksvs.me, si, c, parc - 1, parv + 1);
+		command_exec(si->service, si, c, parc - 1, parv + 1);
 	}
 	else
 	{
