@@ -4,7 +4,7 @@
  *
  * This file contains functionality which implements the OService MODE command.
  *
- * $Id: mode.c 6631 2006-10-02 10:24:13Z jilles $
+ * $Id: mode.c 6657 2006-10-04 21:22:47Z jilles $
  */
 
 #include "atheme.h"
@@ -12,7 +12,7 @@
 DECLARE_MODULE_V1
 (
 	"operserv/mode", FALSE, _modinit, _moddeinit,
-	"$Id: mode.c 6631 2006-10-02 10:24:13Z jilles $",
+	"$Id: mode.c 6657 2006-10-04 21:22:47Z jilles $",
 	"Atheme Development Group <http://www.atheme.org>"
 );
 
@@ -67,7 +67,7 @@ static void os_cmd_mode(sourceinfo_t *si, int parc, char *parv[])
 
 	modeparc = sjtoken(mode, ' ', modeparv);
 
-	channel_mode(opersvs.me->me, c, modeparc, modeparv);
+	channel_mode(si->service->me, c, modeparc, modeparv);
 	command_success_nodata(si, "Set modes \2%s\2 on \2%s\2.", mode, channel);
 }
 
